@@ -3,6 +3,7 @@
 ## Backyard 0.10.1
 Released on ...
 
+- Add Collections renderer for handling booleans as 0/1
 - Divide CB modals with a lot of settings into 2 columns
 
 ## Backyard 0.10.0
